# intro-to-RAG-Agentcore-Workshop

./: .env.example  .gitignore  RAG_AgentCore_Workshop.pptx  README.md  pyproject.toml  requirements.txt  ~$RAG_AgentCore_Workshop.pptx
.claude/: settings.local.json
stage0-setup/: 00_check_prerequisites.py  README.md  pyproject.toml
stage0-setup/data/: aws_agentcore.txt  bedrock_models.txt  rag_fundamentals.txt  serverless_aws.txt  vector_databases.txt
stage1-basic-rag/: 01_chunk_and_embed.py  02_retrieve.py  03_rag_pipeline.py  04_interactive_chat.py  README.md  pyproject.toml  requirements.txt
stage2-bedrock-kb/: 01_create_infrastructure.py  02_create_knowledge_base.py  03_sync_and_query.py  04_compare_approaches.py  README.md  cleanup.py  pyproject.toml
stage3-agentcore-agent/: 01_setup_iam.py  02_deploy_agent.py  03_chat_with_agent.py  README.md  cleanup.py  pyproject.toml  requirements.txt
stage3-agentcore-agent/agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt
stage4-production/: 01_add_memory.py  02_observability.py  03_evaluate_rag.py  04_gateway_tool.py  README.md  cleanup.py  pyproject.toml  requirements.txt
