[project]
name = "intro-to-rag-agentcore-workshop"
version = "0.1.0"
description = "Intro to RAG with Amazon Bedrock AgentCore — workshop base dependencies"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.0",
    # crt extra is required for the `aws login` credential provider
    "botocore[crt]>=1.38.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false
