[project]
name = "rag-workshop-stage0"
version = "0.1.0"
description = "Stage 0 — Setup & prerequisites check"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.0",
    # crt extra is required for the `aws login` credential provider
    "botocore[crt]>=1.38.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false
