[project]
name = "rag-workshop-stage1"
version = "0.1.0"
description = "Stage 1 — Basic RAG from scratch (Titan embeddings + FAISS + Claude)"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.0",
    "botocore[crt]>=1.38.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false
