[project]
name = "rag-workshop-stage3"
version = "0.1.0"
description = "Stage 3 — Deploy a Strands agent to AgentCore Runtime via the agentcore CLI"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.0",
    "botocore[crt]>=1.38.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    # Provides the `agentcore` CLI (configure / launch / invoke / destroy)
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
