[project]
name = "rag-workshop-stage4"
version = "0.1.0"
description = "Stage 4 — Production hardening (memory, observability, evaluation, gateway)"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.0",
    "botocore[crt]>=1.38.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[tool.uv]
package = false
